syntax = "proto3";

package core.v1;

import "core/v1/entity_type.proto";
import "core/v1/platforms.proto";

option go_package = "github.com/getsynq/cloud/api/core/v1";

// Synq Entity.
message Entity {
  string path = 1; // Unique path for entity reference.
  EntityType type = 2;
  string name = 3; // Human friendly name.
  // Optional reference to entity data.
  // Refer to API documentation to check whether data would be populated.
  message EntityRef {
    oneof ref {
      AssetRef asset = 1;
      MonitorRef monitor = 2;
      MonitorSegmentRef monitor_segment = 3;
    }
  }
  optional EntityRef data = 4;
}

message AssetRef {
  string path = 1;
  Platform platform = 2;
}

message MonitorRef {
  string monitor_path = 1;
}

message MonitorSegmentRef {
  string monitor_path = 1;
  string metric_id = 2;
  string segment = 3;
}
